Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/simple_header.html
+++ b/Myerp/Tpl/Index/simple_header.html
@@ -27,6 +27,16 @@
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/jquery-ui-1.8.20.custom/js/jquery-ui-1.8.20.custom.min.js"></script>
 
 <script>
+
+var SITE_INDEX = '<{:SITE_INDEX}>';
+var ET_URL = '<{:ET_URL}>';
+var SITE_PUBLIC = '<{:__PUBLIC__}>';
+
+</script>
+
+<script type='text/javascript' src='<{:__PUBLIC__}>/myerp/Index/header.js'></script>
+
+<script>
 var timer;
 ThinkAjax.updateTip = '<IMG SRC="<{:__PUBLIC__}>/myerp/images/loading2.gif" WIDTH="16" HEIGHT="16" BORDER="0" ALT="loading..." align="absmiddle"> 数据处理中...';
 
