--- a/Myerp/Tpl/Message/left_kongguan.html
+++ b/Myerp/Tpl/Message/left_kongguan.html
@@ -6,21 +6,28 @@
             <li> <a href="javascript:void(0)">&nbsp;<strong><span style="color:#333">门市</span></strong></a> </li>
             <li> <a href="<{:SITE_INDEX}>Xiaoshou">&nbsp;<span>|---产品销售</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Xiaoshou/dingdanlist">&nbsp;<span>|---订单控管</span></a> </li>
+<php>if($is_jidiao || $is_caiwu){</php>      
             <li> <a href="javascript:void(0)">&nbsp;<strong><span style="color:#333">组团</span></strong></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin">&nbsp;<span>|---线路产品创建及控管</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/shenhe">&nbsp;<span>|---产品审核</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan">&nbsp;<span>|---产品控管</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/danxiangfuwu">&nbsp;<span>|---签证及票务</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/customer">&nbsp;<span>|---游客管理</span></a> </li>
+<php>}</php>
+<php>if($is_dijie || $is_caiwu){</php>      
             <li> <a href="javascript:void(0)">&nbsp;<strong><span style="color:#333">地接</span></strong></a> </li>
             <li> <a href="<{:SITE_INDEX}>Dijie">&nbsp;<span>|---产品创建及控管</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Dijie/shenhe">&nbsp;<span>|---产品审核</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Dijie/danxiangfuwu">&nbsp;<span>|---单项服务</span></a> </li>
+<php>}</php>
+<php>if($is_caiwu){</php>      
             <li> <a href="javascript:void(0)">&nbsp;<strong><span style="color:#333">财务</span></strong></a> </li>
             <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/收支项">&nbsp;<span>|---报表项审核</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/报账单">&nbsp;<span>|---报表审核</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/订单">&nbsp;<span>|---订单审核</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/员工">&nbsp;<span>|---绩效统计</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Caiwu/yingshou_tongji">&nbsp;<span>|---营收统计</span></a> </li>
+<php>}</php>
           </ul>
         </div>
   </div>
