--- a/Myerp/Tpl/Message/paituanbiao.html
+++ b/Myerp/Tpl/Message/paituanbiao.html
@@ -11,7 +11,7 @@
             <div id="resultdiv" class="resultdiv"></div>
             <div id="resultdiv_2" class="resultdiv"></div>
             
-            <include file="Index:search_xianlu" />
+            <include file="Index:search_message" />
             
             <table cellpadding="0" cellspacing="0" width="100%" class="list view">
               <tbody>
@@ -22,7 +22,9 @@
                       <tbody>
                         <tr>
                           <td nowrap="nowrap" class="paginationActionButtons">
+<php>if($is_fabu){</php>      
                             <input class="button" type="button" value=" 发布 " onclick="opendialog_1()">
+<php>}</php>
                           </td>
                           <td nowrap="nowrap" align="right" class="paginationChangeButtons">
                           	<{$page}>
@@ -46,8 +48,10 @@
                   <td scope="row" align="left" valign="top"><{$v['title']}></td>
                   <td scope="row" align="center" valign="top"><php>echo date('Y/m/d H:i',$v['time'])</php></td>
                   <td scope="row" align="center" valign="top">
+<php>if($is_fabu){</php>      
                         <input class="button" type="button" value=" 删除 " onclick="infodelete('<{$v[messageID]}>')">
                         <input class="button" type="button" value=" 编辑 " onclick="infoedit('<{$v[messageID]}>')">
+<php>}</php>
                         <PHP>if($v['url_file']){</PHP>
                         <input class="button" type="button" value=" 下载 " onclick="download('<{$v[url_file]}>')">
                         <PHP>}</PHP>
@@ -65,14 +69,6 @@
 </div>
 
 <tp:includeCA file="Index:footer" />
-
-<script language="javascript"> 
-function dosearch()
-{
-		title = document.getElementById('title').value;
-		window.location = '<{:SITE_INDEX}>Chanpin/index/title/'+title;
-}
-</script>
 
 <div id="dialog_gonggao" title="排团表" style="background:#FFF">
 
@@ -178,7 +174,10 @@ function uploadComplete(data){
 function download(url){
 	window.location = '<{:SITE_DATA}>Files/'+url;
 }
-
+function dosearch(str)
+{
+	window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
+}
 </script> 
 
 
