Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Message/gonggao.html
+++ b/Myerp/Tpl/Message/gonggao.html
@@ -6,8 +6,7 @@
 <script src="<{:__PUBLIC__}>/gulianstyle/styles/jquery.autocomplete.min.js" language="javascript"></script>
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/gulianstyle/My97DatePicker/WdatePicker.js"></script>
 <div id="main">
-
-  <include file="Message:left_kongguan" />
+  <tp:includeCA file="Message:left_kongguan" />
   <div id="content" style="margin-left:170px;">
   
             <div id="resultdiv" class="resultdiv"></div>
