--- a/Myerp/Tpl/Message/infohistory.html
+++ b/Myerp/Tpl/Message/infohistory.html
@@ -5,7 +5,7 @@
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/gulianstyle/My97DatePicker/WdatePicker.js"></script>
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/Chanpin/xianlu.js"></script>
 <div id="main">
-  <include file="Message:left_kongguan" />
+  <tp:includeCA file="Message:left_kongguan" />
   <div id="content" style="margin-left:170px;">
   
             <div id="resultdiv" class="resultdiv"></div>
