Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Message/left_kongguan.html
+++ b/Myerp/Tpl/Message/left_kongguan.html
@@ -24,9 +24,10 @@
             <li> <a href="javascript:void(0)">&nbsp;<strong><span style="color:#333">财务</span></strong></a> </li>
             <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/收支项">&nbsp;<span>|---报表项审核</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/报账单">&nbsp;<span>|---报表审核</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/订单">&nbsp;<span>|---订单审核</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/员工">&nbsp;<span>|---绩效统计</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Caiwu/yingshou_tongji">&nbsp;<span>|---营收统计</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/订单">&nbsp;<span>|---提成审核</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist">&nbsp;<span>|---团费确认（产品搜索）</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/员工">&nbsp;<span>|---统计(绩效)</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Caiwu/yingshou_tongji">&nbsp;<span>|---统计(营收)</span></a> </li>
 <php>}</php>
           </ul>
         </div>
