Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Caiwu/zituanlist.html
+++ b/Myerp/Tpl/Caiwu/zituanlist.html
@@ -118,7 +118,7 @@
 <script language="javascript"> 
 
 function dosearch(str){
-		window.location = '<{:SITE_INDEX}>Caiwu/zituanlist'+str;
+		window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
 }
 </script>
 <div id="selectitem" style=" display:none; position:absolute;">
