--- a/Myerp/Tpl/Chanpin/index.html
+++ b/Myerp/Tpl/Chanpin/index.html
@@ -63,7 +63,7 @@
 
 function dosearch(str)
 {
-	window.location = '<{:SITE_INDEX}>Chanpin/index'+str;
+	window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
 }
 
 function copytonew()
