--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -126,7 +126,7 @@
 <tp:includeCA file="Index:footer" />
 <script language="javascript"> 
 function dosearch(str){
-		window.location = '<{:SITE_INDEX}>Chanpin/kongguan'+str;
+		window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
 }
 </script>
 <div id="selectitem" style=" display:none; position:absolute;">
