--- a/Myerp/Tpl/Caiwu/tongji_jixiao.html
+++ b/Myerp/Tpl/Caiwu/tongji_jixiao.html
@@ -267,7 +267,7 @@
 
 <script language="javascript"> 
 function dosearch(str){
-		window.location = '<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/<{$type}>'+str;
+		window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
 }
 </script>
 
