--- a/Myerp/Tpl/Chanpin/customer.html
+++ b/Myerp/Tpl/Chanpin/customer.html
@@ -68,7 +68,7 @@
 <tp:includeCA file="Index:footer" />
 <script language="javascript"> 
 function dosearch(str){
-		window.location = '<{:SITE_INDEX}>Chanpin/customer'+str;
+		window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
 }
 
 function TravelerDetail(systemID){
