Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -184,7 +184,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
     <php>}</php>
     >
     <ul>
-      <li class="subTabMore" style="font-size:12px;"> <a href="<{:SITE_INDEX}>Dijie">团队创建与控管&gt;&gt;</a>
+      <li class="subTabMore" style="font-size:12px;"> <a href="<{:SITE_INDEX}>Dijie/index">团队创建与控管&gt;&gt;</a>
         <ul class="cssmenu">
           <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/国内/kind/国内">国内团队 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/境外/kind/日本">境外团队（日本） </a> </li>
