--- a/Myerp/Tpl/Chanpin/left_kongguan.html
+++ b/Myerp/Tpl/Chanpin/left_kongguan.html
@@ -6,7 +6,7 @@
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan">&nbsp;<span>子团产品</span></a> </li>
             <li id="subModuleList" style="padding:0px; border-top:none">
                   <ul>
-                    <li class="subTabMore" style="font-size:12px;"> <a href="<{:SITE_INDEX}>Chanpin">&nbsp;线路发布及控管&gt;&gt;</a> 
+                    <li class="subTabMore" style="font-size:12px;"> <a href="<{:SITE_INDEX}>Chanpin/index">&nbsp;线路发布及控管&gt;&gt;</a> 
                         <ul class="cssmenu" style="margin-top:8px;">
                           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/近郊游/guojing/国内">近郊游 </a> </li>
                           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/长线游/guojing/国内">长线游 </a> </li>
