--- a/Myerp/Tpl/Dijie/index.html
+++ b/Myerp/Tpl/Dijie/index.html
@@ -26,16 +26,16 @@
         <tr height="20">
           <th scope="col" nowrap="nowrap"><input type="checkbox" class="checkbox" value="" id="checkboxall" onclick="myCheckBoxSelect(this)"></th>
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 标题 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:200px; width:30%"><div> 标题 </div></th>
           <th scope="col" nowrap="nowrap"><div> 编号 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 负责人 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 接团时间 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 发布人 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 单位 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 状态 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 报账情况 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 锁定 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 创建时间 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:50px;"><div> 负责人 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:50px;"><div> 接团时间 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:50px;"><div> 发布人 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:50px;"><div> 单位 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:50px;"><div> 状态 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:50px;"><div> 报账情况 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:50px;"><div> 锁定 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:50px;"><div> 创建时间 </div></th>
           <th scope="col" nowrap="nowrap"><div> 轨迹 </div></th>
         </tr>
           <php>
@@ -46,15 +46,15 @@
       <tr height="40" class="evenListRowS1">
         <td scope="row" align="left" valign="top"><input value="<{$v['chanpinID']}>" id="chanpinitem<{$i}>" type="checkbox" name="itemlist[]" class="checkboxitem"></td>
         <td scope="row" align="left" valign="top"><{$i+1}></td>
-        <td scope="row" align="left" valign="top" style="min-width:200px; width:20%"><a href="<{:SITE_INDEX}>Dijie/fabu/chanpinID/<{$v['chanpinID']}>"><{$v['title']}></a></td>
+        <td scope="row" align="left" valign="top"><a href="<{:SITE_INDEX}>Dijie/fabu/chanpinID/<{$v['chanpinID']}>"><{$v['title']}></a></td>
         <td scope="row" align="left" valign="top"><{$v['tuanhao']}></td>
         <td scope="row" align="left" valign="top"><{$v['onperson']}></td>
         <td scope="row" align="left" valign="top"><{$v['jietuantime']}></td>
         <td scope="row" align="left" valign="top"><{$v['user_name']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:120px;"><{$v['bumen_copy']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['status']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['baozhang_remark']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['islock']}></td>
+        <td scope="row" align="left" valign="top"><{$v['bumen_copy']}></td>
+        <td scope="row" align="left" valign="top"><{$v['status']}></td>
+        <td scope="row" align="left" valign="top"><{$v['baozhang_remark']}></td>
+        <td scope="row" align="left" valign="top"><{$v['islock']}></td>
         <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$v['time']);</php></td>
         <td scope="row" align="center" valign="top"><img onclick="showmessage(this,'<{$v['chanpinID']}>','线路','操作记录');showbox(this,'messageitem','r')" src="<{:__PUBLIC__}>/myerp/images/info_inline.gif" width="16" height="16" border="0" /></td>
       </tr>
