Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -9,10 +9,11 @@
 <a href="/index.php?s=/Forme/fillusertouser" target="_blank" >补填用户</a><br>
 <a href="/index.php?s=/Forme/fillbumentobumen" target="_blank" >补填部门</a><br>
 <a href="/index.php?s=/Forme/resetsystemstatus" target="_blank" >重置系统表</a><br>
-<a href="/index.php?s=/Forme/clearuselessdata" target="_blank" >清除多余数据（冗余数据）</a><br>
+<a href="/index.php?s=/Forme/clearuselessdata" target="_blank" >清除多余数据（冗余数，清空数据时候使用据）</a><br>
 <a href="/index.php?s=/Forme/cleartabledata" target="_blank" >清空临时数据（清空数据时候使用）</a><br>
 <a href="/index.php?s=/Forme/bumenzhangwenreset" target="_blank" >重置zhangwen</a><br>
-
+<a href="/index.php?s=/Forme/zituanstatusreset" target="_blank" >重置子团状态报名</a><br>
+zituanstatusreset
 <script>
 <php>if($url){</php>
 timer=setTimeout('Redirect("<{$url}>")', 3000); //跳转
