Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Caiwu/shenhe.html
+++ b/Myerp/Tpl/Caiwu/shenhe.html
@@ -223,7 +223,7 @@ function show_dingdan(chanpinID){
 	window.open('<{:SITE_INDEX}>Xiaoshou/dingdanxinxi/chanpinID/'+chanpinID);
 }
 function dosearch(str){
-		window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
+	window.location = SITE_INDEX+'Caiwu/shenhe/type/<{$type}>'+str;
 }
 
 </script>
