--- a/Myerp/Tpl/Chanpin/left_kongguan.html
+++ b/Myerp/Tpl/Chanpin/left_kongguan.html
@@ -24,7 +24,7 @@
                     </li>
                   </ul>
             </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/danxiangfuwu">&nbsp;<span>签证及票务</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/danxiangfuwu">&nbsp;<span>单项服务</span></a> </li>
             <li> <a href="#">&nbsp;<span>回收站</span></a> </li>
           </ul>
         </div>
