--- a/Myerp/Tpl/Message/gonggao.html
+++ b/Myerp/Tpl/Message/gonggao.html
@@ -225,7 +225,7 @@ function arraymessage_after(data,status){
 }
 function dosearch(str)
 {
-	window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
+		window.location = SITE_INDEX+'Message/index'+str;
 }
 </script> 
 
