--- a/Myerp/Tpl/Message/paituanbiao.html
+++ b/Myerp/Tpl/Message/paituanbiao.html
@@ -176,7 +176,7 @@ function download(url){
 }
 function dosearch(str)
 {
-	window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
+		window.location = SITE_INDEX+'Message/index'+str;
 }
 </script> 
 
