--- a/Myerp/Tpl/Xiaoshou/dingdanlist.html
+++ b/Myerp/Tpl/Xiaoshou/dingdanlist.html
@@ -119,7 +119,7 @@ function showinfo(chanpinID){
 }
 
 function dosearch(str){
-		window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
+		window.location = SITE_INDEX+'Xiaoshou/dingdanlist'+str;
 }
 
 </script>
