--- a/Myerp/Tpl/Caiwu/tongji_yingshou.html
+++ b/Myerp/Tpl/Caiwu/tongji_yingshou.html
@@ -164,7 +164,7 @@ function show_dingdan(chanpinID){
 	window.open('<{:SITE_INDEX}>Xiaoshou/dingdanxinxi/chanpinID/'+chanpinID);
 }
 function dosearch(str){
-		window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
+		window.location = SITE_INDEX+'Caiwu/yingshou_tongji'+str;
 }
 </script>
 </script>
