--- a/Myerp/Tpl/Chanpin/danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/danxiangfuwu.html
@@ -232,7 +232,7 @@
 <tp:includeCA file="Index:footer" />
 <script>
 function dosearch(str){
-	window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
+		window.location = SITE_INDEX+'Chanpin/danxiangfuwu'+str;
 }
 
 function showinfo(baozhangID){
