--- a/Myerp/Tpl/Index/search_jixiaotongji.html
+++ b/Myerp/Tpl/Index/search_jixiaotongji.html
@@ -22,6 +22,7 @@
         
         <div class="search_form" id="searchdiv_1" style="<PHP>if($sorttabid != 1 && $sorttabid){</PHP>display:none; <PHP>}</PHP>margin-bottom:0px;">
               <div class="edit view search ">
+              <input type="hidden" class="type" value="<{$type}>" />
                     <table width="100%" cellspacing="0" cellpadding="0" border="0">
                       <tbody>
                         <tr>
@@ -109,6 +110,7 @@ function clearsearch(){
 		jQuery('.title_1').val('');
 		jQuery('.start_time').val('');
 		jQuery('.end_time').val('');
+		jQuery('.type').val('');
 }
 
 function _dosearch(sorttabid){
@@ -119,6 +121,8 @@ function _dosearch(sorttabid){
 	str += '/start_time/'+jQuery('.start_time').val();
 	if(jQuery('.end_time').val())
 	str += '/end_time/'+jQuery('.end_time').val();
+	if(jQuery('.type').val())
+	str += '/type/'+jQuery('.type').val();
 	str += '/sorttabid/'+sorttabid;
 	dosearch(str);
 }
