--- a/Myerp/Tpl/Xiaoshou/printzituan.html
+++ b/Myerp/Tpl/Xiaoshou/printzituan.html
@@ -78,7 +78,7 @@ td {
       <td width="13%" align="center" bgcolor="#FFFFFF">&nbsp;出团日期：</td>
       <td width="20%" bgcolor="#FFFFFF" class="gl_td_center"><{$zituan['chutuanriqi']}></td>
       <td width="13%" align="center" bgcolor="#FFFFFF">&nbsp;回团日期：</td>
-      <td width="20%" bgcolor="#FFFFFF" class="gl_td_center"><php>echo jisuanriqi($zituan['chutuanriqi'],$xianlu['xianlu']['tianshu']);</php></td>
+      <td width="20%" bgcolor="#FFFFFF" class="gl_td_center"><php>echo jisuanriqi($zituan['chutuanriqi'],$xituan['xianlulist']['tianshu']);</php></td>
     </tr>
   </table>
   <table width="100%" height="5" border="0" align="center" cellpadding="0" cellspacing="0">
