Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -163,6 +163,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
     <ul>
       <li> <a href="<{:SITE_INDEX}>Xiaoshou/index">线路产品</a> </li>
       <li> <a href="<{:SITE_INDEX}>Xiaoshou/dingdanlist">订单控管</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Xiaoshou/zituanlist">补订订单（子团查找）</a> </li>
     </ul>
     </span> 
     
