Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -361,6 +361,7 @@ function doshenhe_baozhangitem(dotype,datatype,dataID,title){
               <option value="支票">支票</option>
               <option value="签单">签单</option>
               <option value="对冲">对冲</option>
+              <option value="月结">月结</option>
             </select></td>
           <td scope="row" align="left" valign="top"><input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>"></td>
           <td scope="row" align="left" valign="top"><{$v['shenhe_remark']}></td>
@@ -434,6 +435,7 @@ function doshenhe_baozhangitem(dotype,datatype,dataID,title){
               <option value="支票">支票</option>
               <option value="签单">签单</option>
               <option value="对冲">对冲</option>
+              <option value="月结">月结</option>
             </select></td>
           <td scope="row" align="left" valign="top"><input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>"></td>
           <td scope="row" align="left" valign="top"><{$v['shenhe_remark']}></td>
@@ -505,6 +507,7 @@ function doshenhe_baozhangitem(dotype,datatype,dataID,title){
               <option value="支票">支票</option>
               <option value="签单">签单</option>
               <option value="对冲">对冲</option>
+              <option value="月结">月结</option>
             </select></td>
           <td scope="row" align="left" valign="top"><input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>"></td>
           <td scope="row" align="left" valign="top"><{$v['shenhe_remark']}></td>
