--- a/Myerp/Tpl/Chanpin/zituanxiangmu.html
+++ b/Myerp/Tpl/Chanpin/zituanxiangmu.html
@@ -128,6 +128,7 @@
               <option value="支票">支票</option>
               <option value="签单">签单</option>
               <option value="对冲">对冲</option>
+              <option value="月结">月结</option>
             </select></td>
         </tr>
         <tr>
