--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -140,7 +140,8 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
       <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/收支项">报表项审核</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/报账单">报表审核</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/订单">提成审核</a> </li>
-      <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist">团费确认（产品搜索）</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist/dotype/团费确认">团费确认</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist/dotype/产品搜索">产品搜索</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/员工">统计(绩效)</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/yingshou_tongji">统计(营收)</a> </li>
     </ul>
