--- a/Myerp/Tpl/Xiaoshou/zituanlist.html
+++ b/Myerp/Tpl/Xiaoshou/zituanlist.html
@@ -85,6 +85,7 @@
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:300px; width:30%"><div> 产品名称 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 出团日期 </div></th>
+          <th scope="col" nowrap="nowrap"><div> 报名截止 </div></th>
           <th scope="col" nowrap="nowrap" ><div> 计划人数/已报/剩余 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 发布人 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 单位 </div></th>
@@ -105,6 +106,7 @@
         <td scope="row" align="left" valign="top"><{$i+1}></td>
         <td scope="row" align="left" valign="top"><a target="_blank" href="javascript:showxianlu(<{$v['chanpinID']}>,<{$v['parentID']}>)"><{$v['title_copy']}></a></td>
         <td scope="row" align="left" valign="top"><{$v['chutuanriqi']}></td>
+        <td scope="row" align="left" valign="top"><{$v['baomingjiezhi']}></td>
         <td scope="row" align="left" valign="top"><{$v['renshu']}>/<label style="color:red"><php> echo number_format($tuanrenshu['baomingrenshu'])</php></label>/<label style="color:green"><php> echo $v['renshu'] - $baomingrenshu</php></label></td>
         <td scope="row" align="left" valign="top"><{$v['user_name']}></td>
         <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['bumen_copy']}></td>
