Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -57,7 +57,7 @@ function doshenhe_baozhangitem(dotype,datatype,dataID,title){
 function shenhe_after(data,status){
 	if(status == 1){
 		alert("操作成功，审核通过！！");
-		loction.reload();
+		location.reload();
 	}
 }
 </script>
