Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Caiwu/shenhe.html
+++ b/Myerp/Tpl/Caiwu/shenhe.html
@@ -103,7 +103,7 @@
                 <php> $i = -1; foreach($chanpin_list as $v){ $i++;</php>
                 <tr height="40" class="evenListRowS1">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
-                  <td scope="row" align="left" valign="top"><{$v['baozhang']['zituanlist']['title_copy']}></td>
+                  <td scope="row" align="left" valign="top"><{$v['baozhang']['title']}></td>
                   <td scope="row" align="left" valign="top"><{$v['baozhang']['zituanlist']['chutuanriqi']}></td>
                   <td scope="row" align="left" valign="top"><a href="<{:SITE_INDEX}>Chanpin/zituanbaozhang/baozhangID/<{$v['parentID']}>" target="_blank"><{$v['title']}></a></td>
                   <td scope="row" align="left" valign="top"><{$v['type']}></td>
